# contract-review-eval-harness

./: .gitignore  AGENTS.md  CASE_STUDY.md  Makefile  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  what-this-proves.md
.github/workflows/: ci.yml
data/: README.md  nda_sample.md  saas_sample.md
docs/: customer-workflow.md  product-feedback-notes.md  reviewer-guide.md
examples/: live-run-claude-opus-4-8-2026-06-29.md  sample-output.md  scorecard.json  scorecard.md  synthetic-input.json
expected/: nda.json  saas.json
fixtures/: nda_stub.json  saas_stub.json
history/: run_20260623_003056.json  run_20260623_003057.json  run_20260623_003351.json  run_20260623_003354.json  run_20260623_003416.json  run_20260623_003421.json  run_20260623_003442.json  run_20260623_003643.json  run_20260623_003853.json  run_20260623_144502.json  run_20260623_144504.json
scripts/: export_feedback.py
src/contract_eval/: __init__.py  __main__.py  cli.py  models.py  scorecard.py  scorer.py
src/contract_eval/adapters/: __init__.py  base.py  live.py  stub.py
tests/: test_cli.py  test_fuzzy.py  test_gating.py  test_models.py  test_scorer.py  test_stub_adapter.py
