[project]
name = "contract-eval"
version = "0.1.0"
description = "Evaluation harness that measures the quality of AI contract review — clause extraction, risk flags, source citations — against a hand-authored answer set. Synthetic data, deterministic by default."
readme = "README.md"
authors = [
    { name = "sebastianfoerste", email = "sebastianfoerste@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[project.scripts]
contract-eval = "contract_eval.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
